# MiniDB

./: .gitignore  CMakeLists.txt  README.md  test.db
scripts/: build.ps1  build.sh
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/common/: schema.cpp  schema.h  types.h  value.cpp  value.h
src/config/: config.cpp  config.h
src/executor/: executor.cpp  executor.h
src/index/: bptree.cpp  bptree.h  index_manager.cpp  index_manager.h
src/parser/: ast.h  parser.cpp  parser.h  token.h  tokenizer.cpp  tokenizer.h
src/storage/: memory_stream.h  memory_stream_write.h  meta_page.h  rid.h  serializer.cpp  serializer.h  storage.cpp  storage.h
src/storage/pager/: page_utils.h  pager.cpp  pager.h
